[package]
name = "sqlet-examples"
version = "0.8.12"
authors = [
    "Katharina Fey <kookie@spacekookie.de>",
    "João Oliveira <hello@jxs.pt>",
]
description = "Minimal Sqlet usage example"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sqlet/"
repository = "https://github.com/rust-db/sqlet"
edition = "2024"

[features]
enums = ["sqlet/enums"]

[dependencies]
sqlet = { path = "../sqlet", features = ["rusqlite"] }
rusqlite = "0.35"
barrel = { version = "0.7", features = ["sqlite3"] }
log = "0.4"
env_logger = "0.11"
