[package]
name = "sqlet"
version = "0.9.0"
rust-version = "1.85"
authors = [
    "Katharina Fey <kookie@spacekookie.de>",
    "João Oliveira <hello@jxs.pt>",
]
license = "MIT"
description = "Powerful SQL migration toolkit for Rust"
readme = "README.md"
documentation = "https://docs.rs/sqlet/"
repository = "https://github.com/rust-db/sqlet"
keywords = ["database", "sql", "migrations", "orm"]
categories = ["database"]
edition = "2024"

[features]
default = ["toml"]
rusqlite-bundled = ["sqlet-core/rusqlite-bundled"]
rusqlite = ["sqlet-core/rusqlite"]
postgres = ["sqlet-core/postgres"]
mysql = ["sqlet-core/mysql"]
tokio-postgres = ["sqlet-core/tokio-postgres"]
mysql_async = ["sqlet-core/mysql_async"]
tiberius = ["sqlet-core/tiberius"]
tiberius-config = ["sqlet-core/tiberius", "sqlet-core/tiberius-config"]
serde = ["sqlet-core/serde"]
toml = ["sqlet-core/toml"]
enums = ["sqlet-macros/enums"]

[dependencies]
sqlet-core = { version = "0.9.0", path = "../sqlet_core" }
sqlet-macros = { version = "0.9.0", path = "../sqlet_macros" }

[dev-dependencies]
barrel = { git = "https://github.com/jxs/barrel", features = [
    "sqlite3",
    "pg",
    "mysql",
    "mssql",
] }
futures = "0.3"
assert_cmd = "2.0"
predicates = "3"
tempfile = "3"
time = "0.3.5"
tokio-util = { version = "0.7.7", features = ["compat"] }
tokio = { version = "1.9.0", features = ["full"] }
