[package]
name = "sqlet-macros"
version = "0.9.0"
authors = [
    "Katharina Fey <kookie@spacekookie.de>",
    "João Oliveira <hello@jxs.pt>",
]
description = "This crate should not be used directly, it is internally related to Sqlet"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sqlet/"
repository = "https://github.com/rust-db/sqlet"
edition = "2024"

[features]
enums = []

[lib]
proc-macro = true

[dependencies]
sqlet-core = { version = "0.9.0", path = "../sqlet_core" }
quote = "1"
syn = "2"
proc-macro2 = "1"
regex = "1"
heck = "0.5"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3"
